Add com.sun.activation dependency
javax.activation module removed in JDK 11 by JEP-320