@@ -244,9 +244,6 @@
                         <version>3.8.0</version>
                         <configuration>
                             <release>11</release>
-                            <compilerArgs>
-                                <arg>--add-modules=java.activation</arg>
-                            </compilerArgs>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -256,6 +253,11 @@
                     <groupId>org.glassfish.jaxb</groupId>
                     <artifactId>jaxb-runtime</artifactId>
                     <version>2.4.0-b180830.0438</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.sun.activation</groupId>
+                    <artifactId>javax.activation</artifactId>
+                    <version>1.2.0</version>
                 </dependency>
             </dependencies>
         </profile>
